# llm-can-schedule

./: INDEX.md  LLMs_can_Schedule_2408_06993.ipynb  QUICK_REFERENCE.md  README.md  SUMMARY.md  jssp_scheduler_hf.py  llms_can_schedule_2408_06993.py  prompt.md
integrated/: 00_READ_ME_FIRST.txt  Cargo_integrated.toml  SETUP_INSTRUCTIONS.md  inference.rs  jssp_real_training.py  main.rs  prompt.md  scheduler.rs  trainer.rs
integrated-real-train/: Cargo.toml
integrated-real-train/src/: main.rs  metrics.rs  model.rs  scheduler.rs  trainer.rs
integrated/src/: dataset.rs  inference.rs  main.rs  metrics.rs  model.rs  scheduler.rs  trainer.rs
jssp-lora-solver/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  data.rs  jssp.rs  lora.rs  main.rs
jssp-lora-solver/src/: data.rs  jssp.rs  jssp_examples.rs  lora.rs  lora_with_base.rs  main.rs  main_with_starjob.rs  starjob.rs  train_with_base.rs
jssp_llm/: Cargo.toml  README.md
jssp_llm/src/: benchmarks.rs  jssp.rs  llm.rs  main.rs  parser.rs  prompt.rs  solver.rs  tests.rs
rust/: Cargo.toml  PYTHON_VS_RUST.md  README.md  RUST_GUIDE.md  examples.py  jssp_llm_scheduler.py  jssp_scheduler.rs  prompt.md
starjob/: 00_START_HERE.md  REAL_TRAINING_GUIDE.md  jssp_real_training.rs  prompt.md
