
[package]
name = "jssp-scheduler-real"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jssp-scheduler"
path = "src/main.rs"

[dependencies]
# Candle ML Framework - REAL training with loss computation
candle-core = { version = "0.3" } # , features = ["cuda"]
candle-nn = "0.3"
candle-transformers = "0.3"

# CLI and config
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
chrono = "0.4"

# Tokenization
tokenizers = { version = "0.22.2", features = ["onig"] }

# Linear algebra
ndarray = "0.15"

# Optimization
candle-optimisers = "0.3"

# [features]
# default = ["cuda"]
# cuda = ["candle-core/cuda"]
# cpu = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1