[package]
name = "jssp-lora-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.7", features = ["cuda"] }
candle-nn = "0.7"
candle-transformers = "0.7"
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = true
