[package]
name = "jssp-lora-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jssp-lora-solver"
path = "src/main.rs"
[[bin]]
name = "jssp-lora-solver-with-starjob"
path = "src/main_with_starjob.rs"
[[bin]]
name = "train-with-base"
path = "src/train_with_base.rs"


[dependencies]
candle-core = { version = "0.8" } # , features = ["cuda"]
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = true
