[package]
name        = "jssp_llm"
version     = "0.1.0"
edition     = "2021"
description = "JSSP solver using a LoRA-fine-tuned LLM via candle (pure Rust, no Python FFI)"

# ── Feature flags ─────────────────────────────────────────────────────────────
[features]
default = []
cuda    = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
metal   = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

[dependencies]
# ── Candle ML framework ────────────────────────────────────────────────────────
# Pin to 0.8.x — the version cargo already resolved; keeps lockfile stable.
candle-core         = { version = "0.8" }
candle-nn           = { version = "0.8" }
candle-transformers = { version = "0.8" }

# ── Hugging Face Hub ──────────────────────────────────────────────────────────
hf-hub = { version = "0.3", features = ["tokio"] }

# ── Tokenizer ─────────────────────────────────────────────────────────────────
# 0.15 is the version used in candle's own Phi-3 examples and correctly parses
# Phi-3's tokenizer.json (Unigram / sentencepiece-based).
# 0.19 introduced a breaking ModelWrapper schema change that rejects Phi-3's file.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utilities ─────────────────────────────────────────────────────────────────
anyhow    = "1"
# rand 0.9 — rng() and random() API (renamed from thread_rng/gen in 0.8)
rand      = "0.9"
regex     = "1"
clap      = { version = "4", features = ["derive"] }
indicatif = "0.17"

[profile.release]
opt-level = 3
lto       = "thin"