[package]
name = "jssp_scheduler"
version = "0.1.0"
edition = "2021"
description = "Job Shop Scheduling with LLMs using Candle framework"
authors = ["Your Name"]

[dependencies]
# Candle: HuggingFace's Rust ML framework
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"

# Tokenization
tokenizers = "0.13"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Utilities
rand = "0.8"
ndarray = "0.15"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async (for concurrent processing)
tokio = { version = "1", features = ["full"] }

# Performance
rayon = "1.7"

# I/O
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scheduling_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
